src/test/compile-fail/attr-bad-meta.rs
// xfail-stage0
// error-pattern:expecting ]

// asterisk is bogus
#[attr*]
mod m { }